[package]
name = "messages-prost"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
prost = { version = "0.14.1", features = ["derive"], default-features = false }
serde = { version = "1.0.150", features = ["derive"], default-features = false }
prost = { version = "0.14.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.219", default-features = false, features = ["derive", "alloc"] }
heapless = "0.7.16"
bitflags = { version = "2.3.1", default-features = false, features = ["serde"] }
ublox = { git = "https://github.com/uorocketry/ublox", default-features = false, features = ["serde"] }

[build-dependencies]
prost-build = "0.14.1"