[package]
name = "messages-prost"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
prost = { version = "0.14.1", features = ["derive"], default-features = false }
serde = { version = "1.0.150", features = ["derive", "alloc"], default-features = false }
heapless = { version = "0.8", features = ["defmt-03"] }
bitflags = { version = "2.3.1", default-features = false, features = ["serde"] }
ublox = { git = "https://github.com/uorocketry/ublox", default-features = false, features = ["serde"] }
mavlink = { git = "https://github.com/uorocketry/rust-mavlink.git", features = [
  "uorocketry",
], default-features = false }
defmt = "0.3.2"

[build-dependencies]
prost-build = "0.14.1"

[features]
default = ["mavlink/embedded-hal-02", "mavlink/uorocketry"]
std = ["mavlink/std", "mavlink/tcp", "mavlink/udp", "mavlink/direct-serial", "mavlink/serde"]